[tool.poetry]
name = "poetry-tutorial"
version = "0.1.0"
description = ""
authors = ["jwkim <phoongdeng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
